# axum-sea-orm

./: .env  Cargo.toml
src/: main.rs  schema.rs
src/controller/: mod.rs  route_handler.rs
src/model/: mod.rs  notes.rs  prelude.rs
